# rule-updater

./: Cargo.toml
.github/workflows/: rust.yml
src/: download.rs  main.rs  proxy.rs
