[package]
name = "rule_updater"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
futures-util = "0.3.27"
indicatif = "0.17.3"
openssl = { version = "0.10.49", features = ["vendored"] }
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
