[package]
name = "rule_updater"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive", "env"] }
futures = "0.3.28"
futures-util = "0.3.27"
indicatif = "0.17.3"
openssl = { version = "0.10.49", features = ["vendored"] }
regex = "1.8.1"
reqwest = { version = "0.11", features = ["stream", "json"] }
semver = "1.0.17"
serde = { version = "1.0.160", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
zip = "0.6.4"
